2008-04-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/sigtran.refs: updated references
	* doc/manual/news.texi: updates to AGPLv3
	* doc/manual/releases.texi: updates to AGPLv3
	* doc/manual/sigtran.texi: updates to AGPLv3
	* doc/projects/sg.texi: updates to AGPLv3

2008-04-13  Brian Bidulock  <bidulock@openss7.org>

	* sigtran.spec.in: provide for doc/papers
	* debian/rules.in: provide for doc/papers
	* configure.ac: provide for doc/papers
	* doc/Makefile.am: provide for doc/papers

2008-04-11  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile.am: better paper handling
	* doc/projects/Makefile.am: better paper handling
	* THANKS: removed deprecated Nexusware support
	* doc/manual/texi/install.texi: removed deprecated Nexusware support
	* doc/projects/sg.texi: removed deprecated Nexusware support
	* scripts/texi/compat.texi: removed deprecated Nexusware support
	* scripts/texi/funding.texi: removed deprecated Nexusware support
	* scripts/texi/install.texi: removed deprecated Nexusware support

2008-04-10  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: added yacc built headers to sources
	* doc/manual/Makefile.am: distribute agpl.texi
	* sigtran.spec.in: removed deprecated Nexusware support
	* debian/rules.in: removed deprecated Nexusware support
	* Makefile.am: remove deprecated Nexusware support
	* doc/manual/texi/install.texi: remove deprecated Nexusware support
	* scripts/texi/compat.texi: remove deprecated Nexusware support
	* scripts/texi/install.texi: remove deprecated Nexusware support
	* AUTHORS: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-12-30  Brian Bidulock  <bidulock@openss7.org>

	* am/man.am: perform more substitutions
	* m4/openss7.m4: remove strict prototypes

2007-11-06  Brian Bidulock  <bidulock@openss7.org>

	* src/util/m2payac.y: corrections for old compilers