@@ -1,0 +1,235 @@
+'\" rtp
+.\" -*- nroff -*- vim: ft=nroff nocin nosi
+.\"
+.\" @(#) $Id: m2paconfig.8.man,v 0.9.2.1 2008-04-27 04:50:50 brian Exp $
+.\"
+.\" =========================================================================
+.\"
+.\" Copyright (c) 2001-2008  OpenSS7 Corporation <http://www.openss7.com/>
+.\"
+.\" All Rights Reserved.
+.\"
+.\" Permission is granted to make and distribute verbatim copies of this
+.\" manual provided the copyright notice and this permission notice are
+.\" preserved on all copies.
+.\"
+.\" Permission is granted to copy and distribute modified versions of this
+.\" manual under the conditions for verbatim copying, provided that the
+.\" entire resulting derived work is distributed under the terms of a
+.\" permission notice identical to this one
+.\" 
+.\" Since the Linux kernel and libraries are constantly changing, this
+.\" manual page may be incorrect or out-of-date.  The author(s) assume no
+.\" responsibility for errors or omissions, or for damages resulting from
+.\" the use of the information contained herein.  The author(s) may not
+.\" have taken the same level of care in the production of this manual,
+.\" which is licensed free of charge, as they might when working
+.\" professionally.  The author(s) will take no responsibility in it.
+.\" 
+.\" Formatted or processed versions of this manual, if unaccompanied by
+.\" the source, must acknowledge the copyright and authors of this work.
+.\"
+.\" -------------------------------------------------------------------------
+.\"
+.\" U.S. GOVERNMENT RESTRICTED RIGHTS.  If you are licensing this Software
+.\" on behalf of the U.S. Government ("Government"), the following
+.\" provisions apply to you.  If the Software is supplied by the Department
+.\" of Defense ("DoD"), it is classified as "Commercial Computer Software"
+.\" under paragraph 252.227-7014 of the DoD Supplement to the Federal
+.\" Acquisition Regulations ("DFARS") (or any successor regulations) and the
+.\" Government is acquiring only the license rights granted herein (the
+.\" license rights customarily provided to non-Government users).  If the
+.\" Software is supplied to any unit or agency of the Government other than
+.\" DoD, it is classified as "Restricted Computer Software" and the
+.\" Government's rights in the Software are defined in paragraph 52.227-19
+.\" of the Federal Acquisition Regulations ("FAR") (or any successor
+.\" regulations) or, in the cases of NASA, in paragraph 18.52.227-86 of the
+.\" NASA Supplement to the FAR (or any successor regulations).
+.\"
+.\" =========================================================================
+.\" 
+.\" Commercial licensing and support of this software is available from
+.\" OpenSS7 Corporation at a fee.  See http://www.openss7.com/
+.\" 
+.\" =========================================================================
+.\"
+.\" Last Modified $Date: 2008-04-27 04:50:50 $ by $Author: brian $
+.\"
+.\" -------------------------------------------------------------------------
+.\"
+.\" $Log: m2paconfig.8.man,v $
+.\" Revision 0.9.2.1  2008-04-27 04:50:50  brian
+.\" - added missing manpage
+.\"
+.\" =========================================================================
+.R1
+bracket-label "\fR[\fB" "\fR]" "\fR, \fB"
+no-default-database
+database sigtran.refs
+accumulate
+move-punctuation
+abbreviate A
+join-authors ", " ", " " and "
+et-al " et al" 2 3
+abbreviate-label-ranges ".."
+sort-adjacent-labels
+.R2
+.so sigtran.macros
+.\"
+.\"
+.TH M2PACONFIG 8 "@PACKAGE_DATE@" "@PACKAGE@-@VERSION@" "@PACKAGE_TITLE@ Administration"
+.SH NAME
+.B m2paconfig
+\- Interactive M2PA Configuration Utility
+.\"
+.\"
+.SH SYNOPSIS
+.HP
+\fBm2paconfig\fP [\fIOPTIONS\fP]
+.HP
+\fBm2paconfig\fP {\fB-h\fP,\fB--help\fP}
+.HP
+\fBm2paconfig\fP {\fB-V\fP,\fB--version\fP}
+.HP
+\fBm2paconfig\fP {\fB-C\fP,\fB--copying\fP}
+.\"
+.\"
+.SH DESCRIPTION
+.PP
+.B m2paconfig
+is a configuration utility for the M2PA-SL module,
+.BR m2pa_sl (4),
+and the SL-MUX multiplexing driver,
+.BR sl-mux (4).
+Its purpose is to form Signalling Link streams using the M2PA-SL module, connect the M2PA link,
+configure the link, and link the SL stream under the SL-MUX multiplexing driver, configure the lower
+SL stream, and then wait in the background watching for updates to the configuration file and apply
+updates as they occur.
+.PP
+The
+.B m2paconfig
+utility is intended to be run at system startup from a System V initializatoin script.  Once the configuration
+of the M2PA-SL and SL-MUX driver is complete, applications programs can open, attach, enable and use
+Signalling Link streams opened on the driver.
+.PP
+The purpose of the SL-MUX driver is to provide a unified interface for accessing signalling links of
+a number of forms and from a number of various drivers.  Signalling links could correspond to a
+device driver, or could be M2UA signalling links, M2PA signalling links or other implementations.
+Each type of signalling link requires some additional configuration before they can be used and will
+be linked under the SL-MUX by a separate configuration utility.  The
+.B m2paconfig
+utility is the utility used for the M2PA-SL module.
+.\"
+.\"
+.SH OPTIONS
+.PP
+.TP
+.RB {  -i | --interactive }
+Specifies that commands are to be provided interactively from a user at a terminal.  Prompts and
+disagnostic messages will be printed between commands to prompt for user input.
+.TP
+.RB {  -q | --quiet }
+Specifies that commands are to be read from standard input in a non-interactive fashion.  Prompts
+and diagnostic messages will not be printed between commands and there will be no prompt for user
+input.
+.TP
+.RB {  -v | --verbose =[\fILEVEL\fP]}
+Specifies or increments the output verbosity \fILEVEL\fP.  When no \fILEVEL\fP is specified, simply
+increments the current level.  This option can be specified multiple times (e.g\&. \fB-vvvv\fP).
+.TP
+.RB {  -d | --debug }
+Specifies that yacc/bison debugging information should be displayed.  This is only really useful in
+combination with the \fB-i\fP flag.
+.TP
+.RB { -h | --help | -? | --? }
+When this option is encountered, print usage information to
+.I stdout
+and exit.
+.TP
+.RB { -V | --version }
+When this option is encountered, print version information to
+.I stdout
+and exit.
+.TP
+.RB { -C | --copying }
+When this option is encountered, print copying information to
+.I stdout
+and exit.
+.\"
+.\"
+.\".SH "FILE FORMAT"
+.\".PP
+.\"
+.\"
+.SH SIGNALS
+.PP
+.TP
+.RI { SIGHUP }
+This signal causes the
+.B m2paconf
+utility to reread the configuration file.
+.\"
+.\"
+.SH DIAGNOSTICS
+.PP
+An exit status of zero (0) indicates that the command was successful; one (1) indicates that an
+error occurred and a diagnostic message is printed to
+.IR stderr ;
+two (2) indicates that the option syntax was in error and a diagnostic message is printed on
+.IR stderr .
+.PP
+The
+.B --quiet
+options suppresses the printing of diagnostic messages to
+.IR stderr .
+.\"
+.\"
+.\".SH NOTICES
+.\".PP
+.\"
+.\"
+.SH BUGS
+.PP
+.B m2paconfig
+has no known bugs.
+Report problems to
+.RI < bugs@openss7.org >.
+See
+.BR send-pr (1).
+.\"
+.\"
+.SH "SEE ALSO"
+.PP
+.BR m2pa (4),
+.BR sl-mux (4).
+.\"
+.\"
+.SH COMPATIBILITY
+.PP
+.B m2paconfig
+is an OpenSS7-specific configuration command.  Because this command is used interactively and is
+transparent to the SL-User opening SL Streams, compatibility is not an issue.
+.\"
+.\"
+.SH CONFORMANCE
+.PP
+Configuration is not subject to standardization.
+The utility conforms to OpenSS7 project specifications, coding and options standards.
+.\"
+.\"
+.SH HISTORY
+.PP
+The
+.B m2paconfig
+configuration utility was first released in sigtran 0.9.2.4.
+.\"
+.\"
+.SH VERSIONS
+.PP
+This manual page was written for the OpenSS7 SIGTRAN stack.
+.\"
+.\"
+.[
+$LIST$
+.]
+.TI
