@@ -1,3 +1,11 @@
+2008-04-27  Brian Bidulock  <bidulock@openss7.org>
+
+	* doc/man/Makefile.am: corrections for make check target
+	* doc/man/sigtran.refs: corrections for make check target
+	* doc/man/man8/m2paconf.8.man: corrections for make check target
+	* doc/man/man8/m2paconfig.8.man: corrections for make check target
+	* src/util/m2palex.l: corrections for make check target
+
 2008-04-25  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/man/sigtran.refs: updated references
